# Binner

./: README.md
1.0/: CMakeLists.txt
1.0.0/data/: pix.in  reuter_input.in
1.0.0/script/: gmesht2b_comp.sh  rebinone.sh
1.0.0/src/: clipvoxel.c  gmeshindex.c  gmeshrebin2.c  gmeshrot.c  gmesht2b.c  scale3d.c  seebmeshvolc.cpp  serve.c  socketfun.c  voxelize.c
1.0.0/tests/: v384a
1.0.0/vcb/libtestsrc/: makefile
1.0.0/vcb/src/: vcbtrimesh.c
1.0/data/: pix2.in  pix3.in
1.0/include/: binner.h  cell.h  voxelize.h
1.0/script/: numbers.sh  rebinit
1.0/src/: bmeshrebin.c  compvol.c  counts.c  export2vtk.c  geometry.c  largebmeshrebin.c  netrebin.c  sorter.c
1.0/tests/: t6  v750a
1.0/vcb/include/: vcblinalg.h
1.0/vcb/src/: jval.c  makefile  makefile_withgl  slic.cpp  splatting.c  vbutrcast.c  vcbglutils.c
1.1/: CMakeLists.txt
1.1.0/script/: gmesh_mthread_test.sh
1.1.0/src/: reducefunc.c  rotmat.c
1.1.0/vcb/src/: vcbimage.c
1.1.2/script/: cleanbinner.sh  timing_bmeshrebin.sh
1.1.2/src/: CMakeLists.txt  gmeshmat.c  gmeshrebin2.c  volume.c
1.1.2/tests/: v750b
1.1.2/vcb/: CMakeLists.txt
1.1.2/vcb/include/: dmem.h
1.1/include/: binnerio.h  clip.h  volume.h  voxelize.h
1.1/script/: rebinit
1.1/src/: .gdb_history  bmeshrebin.c  bounds.c  cell.c  collector.c  counts.c  geometry.c  gmeshindex.c  gmesht2b.c  pix2mesh.c  rebinapp.c  reduce.c  reducefunc.c  rot3d.c  seepara.cpp  serve.c  tran3d.c
binner/: CMakeLists.txt  Doxyfile
binner/docs/: Doxyfile  DoxygenLayout.xml  binner.doc  gmesh.doc  install.doc  intro.doc  needs.doc
binner/include/: binner.h  binnerio.h  cell.h  clip.h  rebinapp.h  reducefunc.h  socketfun.h  voxelize.h
binner/script/: bmeshrebin_server.sh  cleanbinner.sh  gmesht2b.sh  mkcase.sh  rebin.in  rebinit  uvtestc1
binner/src/: CMakeLists.txt  binner.c  binnerio.c  bmeshrebin.c  bounds.c  bslicer.c  cell.c  clip.c  clip3d.c  clipvoxel.c  collector.c  compvol.c  counts.c  export2vcb.c  export2vtk.c  formain.cpp  gencell.c  geometry.c  getfrom.c  giveto.c  gmeshb2t.c  gmeshindex.c  gmeshmat.c  gmeshorderv.c  gmeshquery.c  gmeshrebin.c  gmeshrebin2.c  gmeshrebin3.c  gmeshrot.c  gmeshrot2.c  gmeshrot3.c  gmesht2b.c  largebmeshrebin.c  makefile  makefile_withgl  map.c  netrebin.c  pix2mesh.c  rebinapp.c  reduce.c  (+13 more)
binner/tests/: t4
binner/vcb/CMakeModules/: OpenGLConfig.cmake
binner/vcb/libtestsrc/: CMakeLists.txt
binner/vcb/src/: CMakeLists.txt  makefile  makefile_withgl
branches/ame/src/: binner.c  gmeshrebin.c  rot3d.c
branches/binner/1.0/include/: volume.h
branches/binner/1.0/script/: rebin.in
branches/binner/1.0/src/: export2vcb.c  getfrom.c  rebin.c
branches/binner/1.0/vcb/libtestsrc/: vcbrcast.c
branches/binner/1.0/vcb/src/: vcbmath.c
branches/binner/1.1/: CMakeLists.txt
branches/binner/1.1/docs/: Doxyfile  binner.doc  gmesh.doc  needs.doc
branches/binner/1.1/include/: binner.h  cell.h  rebinapp.h  socketfun.h
branches/binner/1.1/script/: buildall.sh  generate_report.sh  getstats_g3  gmesh_correctness_test.sh  rebin.in  rebinit
branches/binner/1.1/src/: cell.c  clip3d.c  clipvoxel.c  compvol.c  counts.c  formain.cpp  gmeshrebin.c  gmeshrebin2.c  gmeshrebin3.c  gmeshrot.c  largebmeshrebin.c  map.c  rebin.c  reducefunc.c  seeall.cpp  seebmeshvol.cpp
branches/binner/1.1/vcb/CMakeModules/: OpenGLConfig.cmake
branches/binner/1.1/vcb/libtestsrc/: CMakeLists.txt
data/: cube.in
include/: binner.h  binnerio.h  geometry.h
script/: buildall.sh  cleanbinner.sh
src/: binner.c  bslicer.c
tags/binner/1.0.0/include/: rebinapp.h
tags/binner/1.0.0/script/: slice.sh
tags/binner/1.0.0/src/: CMakeLists.txt  gmeshb2t.c
tags/binner/1.0.0/tests/: v384b
tags/binner/1.1.0/include/: binner.h
tags/binner/1.1.0/src/: rebin.c  rebinapp.c  reduce.c
tags/binner/1.1.0/vcb/src/: dmem.c  vcblic.cpp  vcbmcube.c
tags/binner/1.1.2/data/: reuter_input.inb
tags/binner/1.1.2/include/: geometry.h  reducefunc.h
tags/binner/1.1.2/script/: binnermake.sh  getstats_old  rebinit  uvtestc1
tags/binner/1.1.2/src/: gencell.c  gmeshrot.c  gmeshrot3.c  largebmeshrebin.c  makefile_withgl  pix2mesh.c  reduce.c  seebmeshvol.cpp  seegmesh.cpp
tags/binner/1.1.2/tests/: t3  t7
trunk/binner/: CMakeLists.txt  Doxyfile
trunk/binner/data/: reuter_gmesh.in  trapezoid.in
trunk/binner/docs/: Doxyfile  aug08_perf.xls  binner.doc  gmesh.doc  install.doc
trunk/binner/include/: binner.h  binnerio.h  cell.h  geometry.h  macros.h  rebinapp.h  reducefunc.h  socketfun.h  volume.h
trunk/binner/script/: bmeshrebin_server.sh  buildall.sh  cleanbinner.sh  cleanscripts.sh  generate_report.sh  gmesh_mthread_test.sh  gmesht2b.sh  numbers.sh  rebin.in  rebinall.sh  rebinit  uvtestc1
trunk/binner/src/: CMakeLists.txt  binner.c  binnerio.c  bmeshrebin.c  bounds.c  bslicer.c  cell.c  clip.c  clip3d.c  collector.c  compvol.c  counts.c  export2vcb.c  export2vtk.c  formain.cpp  gencell.c  geometry.c  getfrom.c  giveto.c  gmeshb2t.c  gmeshindex.c  gmeshorderv.c  gmeshquery.c  gmeshrebin.c  gmeshrebin2.c  gmeshrebin3.c  gmeshrot.c  gmeshrot2.c  gmeshrot3.c  gmesht2b.c  largebmeshrebin.c  makefile  makefile_withgl  map.c  netrebin.c  pix2mesh.c  rebin.c  rebinapp.c  reduce.c  reducefunc.c  (+11 more)
trunk/binner/tests/: t1  t2  t5
trunk/binner/vcb/CMakeModules/: OpenGLConfig.cmake
trunk/binner/vcb/include/: vbutrcast.h
trunk/binner/vcb/libtestsrc/: vcbhead.c
trunk/binner/vcb/src/: CMakeLists.txt  makefile  makefile_withgl  vcblinalg.c
trunk/src/: cell.c  clip3d.c  makefile_withgl  rebin.c  volume.c
trunk/vcb/src/: makefile_withgl
vcb/src/: makefile  nr.c
